# schiffe-versenken

./: CMakeLists.txt
.github/workflows/: cmake.yml  codeql-analysis.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  game.h  main.c
src/computer/: computer.c  computer.h
src/logic/: logic.c  logic.h
src/player/: player.c  player.h
src/playground/: playground.c  playground.h
src/statistics/: statistics.c  statistics.h
test/: CMakeLists.txt  test.h  test_computer.c  test_game.c  test_logic.c  test_player.c  test_playground.c  test_statistics.c
